# unsloth-trainnaig

./: .gitignore  README.md  kaggle_notebook.ipynb  main.py  pyproject.toml  treino.jsonl
